# link_aggregator

./: .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  makefile  pyproject.toml  requirenments.txt
bot/: bot.py  config.py
bot/aggregator/: mongo.py  user.py
bot/db/: base.py  link.py  user.py
