[tool.poetry]
name = "link_aggregator"
version = "0.1.0"
description = ""
authors = ["Fire Starter <antonpaly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.7"
lxml = "^4.6.3"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8-awesome = "^1.3.0"
mypy = "^0.961"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
